--- a/joomla.ini
+++ b/joomla.ini
@@ -3,12 +3,12 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-; Fatal error page
-; These will be processed by the JavaScript Build
+; Ukurasa wa makosa mabaya
+; Haya yatachakatwa na JavaScript Build
 BUILD_FATAL_HEADER="Sorry, there was a problem we could not recover from."
-BUILD_FATAL_LANGUAGE="English GB"
-BUILD_FATAL_TEXT="The server returned a \"{{statusCode_statusText}}\""
-BUILD_FATAL_URL_TEXT="Help me resolve this"
+BUILD_FATAL_LANGUAGE="Swahili KE"
+BUILD_FATAL_TEXT="Seva ilirudisha hio "{{statusCode_statusText}}""
+BUILD_FATAL_URL_TEXT="Nisaidie kutatua hili"
 
 ; Build incomplete error page
 ; These will be processed by the JavaScript Build
