--- a/joomla.ini
+++ b/joomla.ini
@@ -7,7 +7,7 @@
 ; Haya yatachakatwa na JavaScript Build
 BUILD_FATAL_HEADER="Sorry, there was a problem we could not recover from."
 BUILD_FATAL_LANGUAGE="Swahili KE"
-BUILD_FATAL_TEXT="Seva ilirudisha hio "{{statusCode_statusText}}""
+BUILD_FATAL_TEXT="Seva ilirudisha hio  \"{{statusCode_statusText}}\""
 BUILD_FATAL_URL_TEXT="Nisaidie kutatua hili"
 
 ; Build incomplete error page
