--- a/joomla.ini
+++ b/joomla.ini
@@ -10,12 +10,12 @@ BUILD_FATAL_LANGUAGE="Swahili KE"
 BUILD_FATAL_TEXT="Seva ilirudisha hio  \"{{statusCode_statusText}}\""
 BUILD_FATAL_URL_TEXT="Nisaidie kutatua hili"
 
-; Build incomplete error page
-; These will be processed by the JavaScript Build
-BUILD_INCOMPLETE_HEADER="Environment Setup Incomplete"
-BUILD_INCOMPLETE_LANGUAGE="English GB"
-BUILD_INCOMPLETE_TEXT="It looks like you are trying to run Joomla! from our git repository. To do so requires you to complete a couple of extra steps first."
-BUILD_INCOMPLETE_URL_TEXT="More Details"
+; Unda ukurasa wa hitilafu ambao haujakamilika
+; Haya yatachakatwa na JavaScript Build
+BUILD_INCOMPLETE_HEADER="Usanidi wa Mazingira ambayo Hayajajakamilika"
+BUILD_INCOMPLETE_LANGUAGE="Swahili KE"
+BUILD_INCOMPLETE_TEXT="Inaonekana unajaribu kuendesha Joomla! kutoka kwa hazina yetu ya git. Kwa kufanya hivyo inakuhitaji ukamilishe hatua kadhaa za ziada kwanza."
+BUILD_INCOMPLETE_URL_TEXT="Maelezo Zaidi"
 
 ; No XML PHP error page
 ; These will be processed by the JavaScript Build
