--- a/joomla.ini
+++ b/joomla.ini
@@ -5,7 +5,7 @@
 
 ; Ukurasa wa makosa mabaya
 ; Haya yatachakatwa na JavaScript Build
-BUILD_FATAL_HEADER="Sorry, there was a problem we could not recover from."
+BUILD_FATAL_HEADER="Samahani, kulikuwa na tatizo ambalo hatukuweza kuliponesha."
 BUILD_FATAL_LANGUAGE="Swahili KE"
 BUILD_FATAL_TEXT="Seva ilirudisha hio  \"{{statusCode_statusText}}\""
 BUILD_FATAL_URL_TEXT="Nisaidie kutatua hili"
